--- a/src/Components/Offers/Offers.css
+++ b/src/Components/Offers/Offers.css
@@ -58,21 +58,38 @@
   .offers {
     display: flex;
     margin: 90px 60px;
-    margin-bottom: 150px;
-    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-top: 999px;
   }
 }
+
+@media only screen and (max-width: 912px) {
+  .offers {
+    display: block;
+    margin: 0px 60px;
+    padding: 0px 80px;
+  }
+  .excluscive_image {
+    display: block;
+  }
+
+  .offers-left {
+    margin-top: 90%;
+  }
+}
+
 @media only screen and (max-width: 820px) {
   .offers {
     display: block;
-    margin: 90px 60px;
+    margin: 0px 60px;
+    padding: 0px 80px;
   }
   .excluscive_image {
     display: none;
   }
 
   .offers-left {
-    margin-top: 140%;
+    margin-top: 99%;
   }
 }
 
@@ -89,29 +106,7 @@
 }
 
 @media only screen and (max-width: 430px) {
-  .offers-left {
-    display: block;
-    margin: 10px -120px;
-    margin-top: 260%;
-  }
-
-  .offers-left h1 {
-    font-size: 50px;
-    text-align: center;
-    text-align: center;
-  }
-
-  .offers-left p {
-    font-size: 30px;
-    text-align: center;
-    text-align: center;
-  }
-
-  .excluscive_image {
-    display: none;
-  }
-
   .offers {
-    background: linear-gradient(180deg, #ffffff 0%, #ffffff22 60%);
+    display: none;
   }
 }
