--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -76,3 +76,11 @@
     margin: 2px 70px;
   }
 }
+
+@media only screen and (max-width: 430px) {
+  .collection {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 2px 70px;
+  }
+}
