--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -73,3 +73,16 @@
     font-weight: 600;
   }
 }
+
+@media only screen and (max-width: 430px) {
+  .popular-item {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1px;
+    margin: 40px;
+    margin-bottom: 5000px;
+  }
+  .popular {
+    margin-bottom: 340%;
+  }
+}
