--- a/src/Pages/CSS/ShopCategory.css
+++ b/src/Pages/CSS/ShopCategory.css
@@ -30,6 +30,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 80px;
+  text-align: center;
 }
 
 .shopcategory-loadmore {
@@ -63,5 +64,12 @@
   .shopcategory-products {
     grid-template-columns: 1fr 1fr;
     margin: 10px 30px;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  .shopcategory-products {
+    grid-template-columns: 1fr;
+    margin: 10px 0px;
   }
 }
