--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -83,4 +83,25 @@
     grid-template-columns: 1fr;
     margin: 2px 70px;
   }
+  .new-collections h1 {
+    color: #6ef640;
+    font-size: 40px;
+    font-weight: 600;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .new-collections {
+    margin-top: 370%;
+  }
+  .collection {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 2px 70px;
+  }
+  .new-collections h1 {
+    color: #6ef640;
+    font-size: 30px;
+    font-weight: 600;
+  }
 }
