--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -50,8 +50,9 @@
   justify-content: center;
 }
 .hero_image {
-  width: 400px;
-  margin-top: 30px;
+  width: 500px;
+  margin-top: 90px;
+  border-radius: 100px;
 }
 
 @media only screen and (max-width: 912px) {
@@ -92,8 +93,8 @@
     margin-top: 60px;
   }
   .hero_image {
-    width: 500px;
-    margin-top: 30px;
+    width: 800px;
+    margin-top: 20px;
   }
 }
 
